--- a/Praktikum4_Jobsheet2.ipynb
+++ b/Praktikum4_Jobsheet2.ipynb
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "UmhjcxKuD6sG",
-        "outputId": "a856dd2b-ab34-4094-c327-7bf01bc47c5f"
+        "outputId": "2cd7fa4f-b152-461e-afd8-a8fb6a45f4cf"
       },
       "outputs": [
         {
@@ -79,9 +79,9 @@
           "height": 74
         },
         "id": "3Opjp_HdHMFF",
-        "outputId": "92711cd1-1c67-47a8-94d1-093c70448711"
+        "outputId": "6fe9da0b-a16b-4455-d9b7-f0fec089204b"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -91,9 +91,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-c5862f82-8534-4b06-92a7-7075574b101b\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-0cdca7aa-b8c5-4327-9196-5f324671935f\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-c5862f82-8534-4b06-92a7-7075574b101b\">\n",
+              "     <output id=\"result-0cdca7aa-b8c5-4327-9196-5f324671935f\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -281,7 +281,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving Lenna_(test_image).png to Lenna_(test_image).png\n"
+            "Saving Lenna_(test_image).png to Lenna_(test_image) (1).png\n"
           ]
         }
       ]
@@ -310,9 +310,9 @@
           "height": 529
         },
         "id": "4TioAKRtES86",
-        "outputId": "309478b1-983b-43af-c4be-0c3c71fe365d"
+        "outputId": "551c459a-1cc0-411f-8735-215b614c0d99"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -352,9 +352,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JLVFFw5eHwbe",
-        "outputId": "af691814-c0d7-48ce-dcc8-9baf8461ab03"
+        "outputId": "ec2a7f8e-c6ea-4696-8d4f-10b8c1a65f9f"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
